OPSMN-5658: Fixed height of the specimen color coding box so that it does not spill over into the slot below it in the container map.

--- a/www/app/styles/container-map.css
+++ b/www/app/styles/container-map.css
@@ -137,7 +137,6 @@
 
 .os-container-map-wrapper.os-color-coded-spmns .slot-desc {
   padding: 12.5% 5px;
-  height: calc(100% - 25px);
 }
 
 .os-container-map .slot-desc:hover {
